# goodreads_ml_play

./: .gitignore  pyproject.toml
models/: initial_model.pth
