[tool.poetry]
name = "goodreads"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.5.12"
nltk = "^3.7"
seaborn = "^0.12.1"
wordcloud = "^1.8.2.2"
jupyter = "^1.0.0"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
